# jopfra

./: .gitignore  README.md  TODO.txt  compreq.sh  pyproject.toml  requirements.py  set_version.py
.github/workflows/: test_release.yml
jopfra/: api.py  flatten.py  paths.py  run.py  types.py
jopfra/minimisers/: __init__.py  api.py  diff_evo.py  grad_desc.py  min.py  random.py  sobol.py  stopping_criteria.py  torch_optim.py
jopfra/problems/: __init__.py  api.py  datasets.py  monitoring.py  quadratic.py  ssurjano.py  torch.py  utils.py
jopfra/problems/data/: baby_size.csv  co2_mm_mlo.csv
jopfra/problems/fetal_growth/: __init__.py  size.csv  source.txt
tests/: conftest.py  test_init.py  test_minimisers.py  test_problems.py
tests/problems/: test_utils.py
